--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 网络激活大师
-keywords: CAD安装,CAD安装包,CAD激活,CAD破解,CAD2006,CAD2007,CAD2008,CAD2009,CAD2010,CAD2011,CAD2012,CAD2013,CAD2014, CAD2015,CAD2016,CAD2017,CAD2018,CAD2019,CAD2020,CAD2021,CAD2022,CORELdraw安装,CORELdraw激活,photoshop,adboe,office365,Microsoft365，Windows密钥,office密钥,office2021激活密钥
-description: CAD安装,CAD安装包,CAD激活,CAD破解,CAD2006,CAD2007,CAD2008,CAD2009,CAD2010,CAD2011,CAD2012,CAD2013,CAD2014, CAD2015,CAD2016,CAD2017,CAD2018,CAD2019,CAD2020,CAD2021,CAD2022,CORELdraw安装,CORELdraw激活,photoshop,adboe,office365,Microsoft365，Windows密钥,office密钥,office2021激活密钥
+title: ODS.IM---网络激活大师
+keywords: ODS.IM,网络激活大师,CAD安装,CAD安装包,CAD激活,CAD破解,CAD2006,CAD2007,CAD2008,CAD2009,CAD2010,CAD2011,CAD2012,CAD2013,CAD2014, CAD2015,CAD2016,CAD2017,CAD2018,CAD2019,CAD2020,CAD2021,CAD2022,CORELdraw安装,CORELdraw激活,photoshop,adboe,office365,Microsoft365，Windows密钥,office密钥,office2021激活密钥
+description: ODS.IM,网络激活大师,CAD安装,CAD安装包,CAD激活,CAD破解,CAD2006,CAD2007,CAD2008,CAD2009,CAD2010,CAD2011,CAD2012,CAD2013,CAD2014, CAD2015,CAD2016,CAD2017,CAD2018,CAD2019,CAD2020,CAD2021,CAD2022,CORELdraw安装,CORELdraw激活,photoshop,adboe,office365,Microsoft365，Windows密钥,office密钥,office2021激活密钥
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ods.im" # the base hostname & protocol for your site
 
@@ -38,7 +38,7 @@ taobao_username: ms365.taobao.com
 
 # statistic analysis 统计代码
 # 百度统计 id，将统计代码替换为自己的百度统计id，即
-# hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
+hm.src = "//hm.baidu.com/hm.js?66f1422db50724bccb84808f04c2cd93";
 # xxxxx字符串
 # baidu_tongji_id: cf8506e0ef223e57ff6239944e5d46a4
 # google_analytics_id: UA-72449510-4 # google 分析追踪id
