--- a/_config.yml
+++ b/_config.yml
@@ -38,9 +38,9 @@ taobao_username: ms365.taobao.com
 
 # statistic analysis 统计代码
 # 百度统计 id，将统计代码替换为自己的百度统计id，即
-hm.src = "//hm.baidu.com/hm.js?66f1422db50724bccb84808f04c2cd93";
+# hm.src = "//hm.baidu.com/hm.js?66f1422db50724bccb84808f04c2cd93";
 # xxxxx字符串
-# baidu_tongji_id: cf8506e0ef223e57ff6239944e5d46a4
+baidu_tongji_id: 66f1422db50724bccb84808f04c2cd93
 # google_analytics_id: UA-72449510-4 # google 分析追踪id
 
 # Build settings
