--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: ODS.IM---网络激活大师
 keywords: ODS.IM,网络激活大师,CAD安装,CAD安装包,CAD激活,CAD破解,CAD2006,CAD2007,CAD2008,CAD2009,CAD2010,CAD2011,CAD2012,CAD2013,CAD2014, CAD2015,CAD2016,CAD2017,CAD2018,CAD2019,CAD2020,CAD2021,CAD2022,CORELdraw安装,CORELdraw激活,photoshop,adboe,office365,Microsoft365，Windows密钥,office密钥,office2021激活密钥
 description: ODS.IM,网络激活大师,CAD安装,CAD安装包,CAD激活,CAD破解,CAD2006,CAD2007,CAD2008,CAD2009,CAD2010,CAD2011,CAD2012,CAD2013,CAD2014, CAD2015,CAD2016,CAD2017,CAD2018,CAD2019,CAD2020,CAD2021,CAD2022,CORELdraw安装,CORELdraw激活,photoshop,adboe,office365,Microsoft365，Windows密钥,office密钥,office2021激活密钥
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://ods.im" # the base hostname & protocol for your site
+url: "https://cad.it365.site" # the base hostname & protocol for your site
 
 # permalink: /:year/:month/:day/:title/
 permalink: /:title/
